# trollbot.py

./: .gitignore  pyproject.toml
examples/: 01_sample.py  02_test_cmd.py  03_welcome.py
trollbot/: bot.py  context.py
